Downgrade to JDK8 to have more compatibility on old systems.